# preppilot-ai

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5c16c94a1b0d_initial_schema.py
backend/app/: __init__.py  main.py  seed.py
backend/app/ai/: graph.py  llm.py  rubrics.py  skills.py  state.py
backend/app/ai/nodes/: evaluation_node.py  interview_node.py
backend/app/ai/prompts/: analysis.py  evaluator.py  interviewer.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  analytics.py  answer.py  competency.py  interview_session.py  job_description.py  question.py  readiness_score.py  resume.py  types.py  usage.py  user.py
backend/app/observability/: metrics.py
backend/app/repositories/: repositories.py
backend/app/schemas/: requests.py
backend/app/services/: analytics_service.py  auth_service.py  dashboard_service.py  interview_service.py  jd_service.py  job_intelligence_service.py  reference_service.py  resume_intelligence_service.py  resume_service.py  roadmap_service.py  scoring_service.py  usage_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/ai_eval/: benchmark.jsonl  run_eval.py
backend/tests/integration/: test_intelligence.py  test_interview_flow.py
backend/tests/unit/: test_rubrics.py  test_scoring.py  test_skills.py
(+44 files in other folders)
